--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -4,7 +4,7 @@ description: ""
 destination: _site_local
 url: "http://localhost:4000"
 
-paginate: 10
+#paginate: 10
 
 markdown: rdiscount
 permalink: pretty
