--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,10 +1,8 @@
 name: "Aanjhan Ranganathan"
 description: ""
 
-destination: _site_local
-url: "http://localhost:4000"
-
-#paginate: 10
+destination: ./_site_local
+baseurl: ""
 
 markdown: kramdown
 permalink: pretty
